# bahram-python-projects

./: .envfile  LICENSE  README.md
sammy_poetry/: pyproject.toml
