[tool.poetry]
name = "sammy-poetry"
version = "0.1.0"
description = ""
authors = ["jamalmahmoudi <devops523@gmail.com>"]
readme = "README.md"
packages = [{include = "sammy_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
